--- a/app/src/main/res/layout-land/activity_main_round.xml
+++ b/app/src/main/res/layout-land/activity_main_round.xml
@@ -95,8 +95,10 @@
                         android:text=""
                         android:textAlignment="viewEnd"
                         android:textColor="#FEFEFE"
-                        android:textSize="42dp"
+                        android:textSize="42sp"
                         android:maxLines="1"
+                        android:inputType="text"
+                        android:importantForAutofill="no"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +172,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_op_land"
-                    android:onClick="operation"
                     android:text="+"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -187,7 +188,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_op_land"
-                    android:onClick="operation"
                     android:text="-"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -204,7 +204,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_op_land"
-                    android:onClick="operation"
                     android:text="×"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -221,7 +220,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_op_land"
-                    android:onClick="operation"
                     android:text="÷"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -275,7 +273,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="0"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -291,7 +288,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="decimal"
                 android:text="."
                 android:textAllCaps="false"
                 android:textColor="@color/white"
@@ -308,7 +304,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="newerEquals"
                 android:text="="
                 android:textAllCaps="false"
                 android:textColor="@color/colorAccent"
@@ -325,7 +320,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="1"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -341,7 +335,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="2"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -357,7 +350,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="3"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -373,7 +365,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="4"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -389,7 +380,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="5"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -405,7 +395,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="6"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -421,7 +410,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="7"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -437,7 +425,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="8"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -453,7 +440,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="9"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -528,7 +514,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="√"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -546,7 +531,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="mod"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -564,7 +548,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="("
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/roundedTopBarCompTextSize"
@@ -581,7 +564,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text=")"
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/roundedTopBarCompTextSize"
@@ -598,7 +580,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="!"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -616,7 +597,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:paddingTop="7.5dp"
                 android:text="^"
                 android:textAllCaps="false"
@@ -635,7 +615,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="log"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -653,7 +632,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="ln"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -671,7 +649,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="sin"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -689,7 +666,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="cos"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -707,7 +683,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="tan"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -725,7 +700,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="csc"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -743,7 +717,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="sec"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -761,7 +734,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="operation"
                 android:text="cot"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -779,7 +751,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="number"
                 android:text="π"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -797,7 +768,6 @@
                 android:layout_marginVertical="3dp"
                 android:background="@drawable/circle_secondary"
                 android:elevation="0dp"
-                android:onClick="number"
                 android:text="e"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -817,7 +787,6 @@
             android:layout_marginVertical="12dp"
             android:clickable="false"
             android:elevation="8dp"
-            android:onClick="backspace"
             app:fabCustomSize="69dp"
             app:fabSize="normal"
             android:visibility="gone"
@@ -832,7 +801,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/circle_cheat_the_system_again"
-            android:onClick="backspace"
             android:padding="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/deleteAnchor"
             app:layout_constraintEnd_toEndOf="@+id/deleteAnchor"
@@ -846,7 +814,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="14dp"
             android:background="@null"
-            android:onClick="backspace"
             android:padding="12dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/scrollBar"
@@ -937,7 +904,6 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="2dp"
                 android:background="@drawable/circle_cheat_the_system_again"
-                android:onClick="inv"
                 android:text="INV"
                 android:textColor="@color/white"
                 android:textSize="16sp"
@@ -990,9 +956,8 @@
             android:id="@+id/bDegRad"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="56dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginEnd="4dp"
-            android:onClick="switchMode"
             android:background="@null"
             android:text="@string/rad"
             android:textColor="#FFFFFF"
