--- a/app/src/main/res/layout-sw411dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw411dp-land/activity_main.xml
@@ -68,8 +68,10 @@
                         android:text=""
                         android:textAlignment="viewEnd"
                         android:textColor="#FEFEFE"
-                        android:textSize="42dp"
+                        android:textSize="42sp"
                         android:maxLines="1"
+                        android:inputType="text"
+                        android:importantForAutofill="no"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +114,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="+"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -131,7 +132,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="-"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -150,7 +150,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="×"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -169,7 +168,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="÷"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -187,7 +185,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="newerEquals"
                 android:text="="
                 android:textColor="@color/colorAccent"
                 android:textSize="30sp"
@@ -205,7 +202,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="5"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -221,7 +217,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="8"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -236,7 +231,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="3"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -251,7 +245,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="2"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -268,7 +261,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="7"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -283,7 +275,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="6"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -298,7 +289,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="0"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -314,7 +304,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="decimal"
                 android:text="."
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -331,7 +320,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="9"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -346,7 +334,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="1"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -361,7 +348,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="4"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -387,11 +373,10 @@
                 android:alpha="1"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:paddingTop="11dp"
                 android:text="^"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
+                android:textSize="28sp"
                 app:layout_constraintStart_toEndOf="@+id/bSin"
                 app:layout_constraintTop_toBottomOf="@+id/bMod" />
 
@@ -401,11 +386,10 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="sin"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/bSec"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -415,10 +399,9 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="!"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bSqrt" />
 
@@ -428,11 +411,10 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="number"
                 android:text="π"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/bE" />
 
@@ -442,11 +424,10 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="cos"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/bCot"
                 app:layout_constraintEnd_toStartOf="@+id/bTan" />
 
@@ -456,11 +437,10 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="tan"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/bPi"
                 app:layout_constraintEnd_toStartOf="@+id/bCsc" />
 
@@ -470,11 +450,10 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="csc"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/bPi"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -485,10 +464,9 @@
                 android:background="@null"
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text=")"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/bParenthesisOpen"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -499,12 +477,11 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="log"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/bTan"
                 app:layout_constraintStart_toEndOf="@+id/bExp" />
 
@@ -514,11 +491,10 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="sec"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/bCot" />
 
@@ -528,12 +504,11 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="number"
                 android:text="e"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -543,7 +518,6 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="mod"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -558,10 +532,9 @@
                 android:background="@null"
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="("
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/bMod"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -571,12 +544,11 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="ln"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/bCsc"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -587,7 +559,6 @@
                 android:background="@null"
                 android:elevation="10dp"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="√"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -601,12 +572,11 @@
                 android:layout_height="61.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="cot"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/bPi" />
 
@@ -619,8 +589,8 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:clickable="true"
+            android:focusable="true"
             android:elevation="8dp"
-            android:onClick="backspace"
             app:fabCustomSize="69dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toTopOf="@+id/buttonView"
@@ -635,7 +605,6 @@
             android:layout_marginBottom="8dp"
             android:background="@null"
             android:foreground="?attr/selectableItemBackground"
-            android:onClick="inv"
             android:text="INV"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
@@ -686,9 +655,8 @@
             android:id="@+id/bDegRad"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="56dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginEnd="4dp"
-            android:onClick="switchMode"
             android:background="@null"
             android:text="@string/rad"
             android:textColor="#FFFFFF"
