--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -87,8 +87,10 @@
                         android:text=""
                         android:textAlignment="viewEnd"
                         android:textColor="#FEFEFE"
-                        android:textSize="42dp"
+                        android:textSize="42sp"
                         android:maxLines="1"
+                        android:inputType="text"
+                        android:importantForAutofill="no"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -247,7 +249,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="+"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -267,7 +268,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="-"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -287,7 +287,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="×"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -307,7 +306,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="÷"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -326,7 +324,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="newerEquals"
                 android:text="="
                 android:textColor="@color/colorAccent"
                 android:textSize="30sp"
@@ -343,7 +340,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="5"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -360,7 +356,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="8"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -376,7 +371,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="3"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -392,7 +386,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="2"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -410,7 +403,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="7"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -426,7 +418,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="6"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -442,7 +433,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="0"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -459,7 +449,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="decimal"
                 android:text="."
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -477,7 +466,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="9"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -493,7 +481,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="1"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -509,7 +496,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="4"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -570,7 +556,6 @@
                                 android:background="@null"
                                 android:elevation="10dp"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:paddingBottom="1dp"
                                 android:text="√"
                                 android:textAllCaps="false"
@@ -585,11 +570,10 @@
                                 android:alpha="1"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:paddingTop="10dp"
                                 android:text="^"
                                 android:textColor="#FFFFFF"
-                                android:textSize="28dp"
+                                android:textSize="28sp"
                                 app:layout_constraintStart_toEndOf="@+id/bCbqrt"
                                 app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />
 
@@ -599,10 +583,9 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="!"
                                 android:textColor="#FFFFFF"
-                                android:textSize="20dp" />
+                                android:textSize="20sp" />
 
                             <Button
                                 android:id="@+id/bE"
@@ -610,12 +593,11 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="number"
                                 android:text="e"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="22dp" />
+                                android:textSize="22sp" />
 
                             <Button
                                 android:id="@+id/bMod"
@@ -623,12 +605,11 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="mod"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="20dp" />
+                                android:textSize="20sp" />
 
                             <Button
                                 android:id="@+id/bLog"
@@ -640,7 +621,7 @@
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="20dp" />
+                                android:textSize="20sp" />
 
                             <Button
                                 android:id="@+id/bLn"
@@ -648,12 +629,11 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="ln"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="20dp" />
+                                android:textSize="20sp" />
                         </LinearLayout>
                     </HorizontalScrollView>
 
@@ -674,11 +654,10 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="sin"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="19dp"
+                                android:textSize="19sp"
                                 app:layout_constraintStart_toStartOf="@+id/horizontalScrollView" />
 
                             <Button
@@ -687,11 +666,10 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="cos"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="19dp"
+                                android:textSize="19sp"
                                 app:layout_constraintStart_toEndOf="@+id/bSqrt"
                                 app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />
 
@@ -701,11 +679,10 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="tan"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="19dp"
+                                android:textSize="19sp"
                                 app:layout_constraintStart_toEndOf="@+id/bCbqrt"
                                 app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />
 
@@ -715,11 +692,10 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="csc"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="19dp" />
+                                android:textSize="19sp" />
 
                             <Button
                                 android:id="@+id/bSec"
@@ -727,11 +703,10 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="sec"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="19dp" />
+                                android:textSize="19sp" />
 
                             <Button
                                 android:id="@+id/bCot"
@@ -739,12 +714,11 @@
                                 android:layout_height="match_parent"
                                 android:background="@null"
                                 android:foreground="?attr/selectableItemBackground"
-                                android:onClick="operation"
                                 android:text="cot"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
-                                android:textSize="19dp" />
+                                android:textSize="19sp" />
 
                         </LinearLayout>
                     </HorizontalScrollView>
@@ -777,11 +751,10 @@
                 android:background="@null"
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:stateListAnimator="@null"
                 android:text="("
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tertiaryVGuide"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -793,11 +766,10 @@
                 android:background="@null"
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:stateListAnimator="@null"
                 android:text=")"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tertiaryVGuide"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -808,12 +780,11 @@
                 android:layout_height="75dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="number"
                 android:stateListAnimator="@null"
                 android:text="π"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toTopOf="@+id/bParenthesisOpen"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tertiaryVGuide" />
@@ -824,12 +795,11 @@
                 android:layout_height="75dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="inv"
                 android:stateListAnimator="@null"
                 android:text="INV"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/bParenthesisClose"
                 app:layout_constraintStart_toStartOf="@+id/tertiaryVGuide"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -853,8 +823,8 @@
                 android:layout_marginHorizontal="14dp"
                 android:layout_marginVertical="12dp"
                 android:clickable="true"
+                android:focusable="true"
                 android:elevation="8dp"
-                android:onClick="backspace"
                 app:fabCustomSize="69dp"
                 app:fabSize="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -1036,11 +1006,10 @@
             android:id="@+id/bDegRad"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="56dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginEnd="4dp"
-            android:onClick="switchMode"
             android:background="@null"
-            android:text="RAD"
+            android:text="@string/rad"
             android:textColor="#FFFFFF"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/toolbar"
