--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -68,8 +68,10 @@
                         android:text=""
                         android:textAlignment="viewEnd"
                         android:textColor="#FEFEFE"
-                        android:textSize="42dp"
+                        android:textSize="42sp"
                         android:maxLines="1"
+                        android:inputType="text"
+                        android:importantForAutofill="no"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +114,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="+"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -121,7 +122,6 @@
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="@+id/bEquals"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/bEquals"
                 app:layout_constraintTop_toTopOf="@+id/bEquals" />
 
             <Button
@@ -132,7 +132,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="-"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -141,7 +140,6 @@
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="@+id/b3"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/b3"
                 app:layout_constraintTop_toBottomOf="@+id/sMulti" />
 
             <Button
@@ -152,7 +150,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="×"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -161,7 +158,6 @@
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="@+id/b6"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/b6"
                 app:layout_constraintTop_toBottomOf="@+id/b9" />
 
             <Button
@@ -172,7 +168,6 @@
                 android:elevation="12dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="operation"
                 android:text="÷"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -181,7 +176,6 @@
                 android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="@+id/b9"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/b9"
                 app:layout_constraintTop_toTopOf="@+id/b9" />
 
             <Button
@@ -191,7 +185,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="newerEquals"
                 android:text="="
                 android:textColor="@color/colorAccent"
                 android:textSize="30sp"
@@ -209,7 +202,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="5"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -225,7 +217,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="8"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -240,7 +231,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="3"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -255,7 +245,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="2"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -272,7 +261,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="7"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -287,7 +275,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="6"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -302,7 +289,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="0"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -318,7 +304,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="decimal"
                 android:text="."
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -335,7 +320,6 @@
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="9"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -350,7 +334,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="1"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -365,7 +348,6 @@
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
                 android:hapticFeedbackEnabled="true"
-                android:onClick="number"
                 android:text="4"
                 android:textColor="@color/darkColorText"
                 android:textColorHint="#3F51B5"
@@ -391,11 +373,10 @@
                 android:alpha="1"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:paddingTop="11dp"
                 android:text="^"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
+                android:textSize="28sp"
                 app:layout_constraintStart_toEndOf="@+id/bSin"
                 app:layout_constraintTop_toBottomOf="@+id/bMod" />
 
@@ -405,11 +386,10 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="sin"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/bSec"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -419,10 +399,9 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="!"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bSqrt" />
 
@@ -432,11 +411,10 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="number"
                 android:text="π"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/bE" />
 
@@ -446,11 +424,10 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="cos"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/bCot"
                 app:layout_constraintEnd_toStartOf="@+id/bTan" />
 
@@ -460,11 +437,10 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="tan"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/bPi"
                 app:layout_constraintEnd_toStartOf="@+id/bCsc" />
 
@@ -474,11 +450,10 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="csc"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/bPi"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -489,10 +464,9 @@
                 android:background="@null"
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text=")"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/bParenthesisOpen"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -503,12 +477,11 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="log"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/bTan"
                 app:layout_constraintStart_toEndOf="@+id/bExp" />
 
@@ -518,11 +491,10 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="sec"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/bCot" />
 
@@ -532,12 +504,11 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="number"
                 android:text="e"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -547,11 +518,10 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
-                android:text="%"
+                android:text="mod"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="17sp"
+                android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/bSqrt"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -562,10 +532,9 @@
                 android:background="@null"
                 android:elevation="8dp"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="("
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/bMod"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -575,12 +544,11 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="ln"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/bCsc"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -591,7 +559,6 @@
                 android:background="@null"
                 android:elevation="10dp"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="√"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
@@ -605,12 +572,11 @@
                 android:layout_height="76.25dp"
                 android:background="@null"
                 android:foreground="?attr/selectableItemBackground"
-                android:onClick="operation"
                 android:text="cot"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/bPi" />
 
@@ -623,8 +589,8 @@
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="20dp"
             android:clickable="true"
+            android:focusable="true"
             android:elevation="8dp"
-            android:onClick="backspace"
             app:fabCustomSize="69dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toTopOf="@+id/buttonView"
@@ -639,7 +605,6 @@
             android:layout_marginBottom="8dp"
             android:background="@null"
             android:foreground="?attr/selectableItemBackground"
-            android:onClick="inv"
             android:text="INV"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
@@ -690,9 +655,8 @@
             android:id="@+id/bDegRad"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="56dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginEnd="4dp"
-            android:onClick="switchMode"
             android:background="@null"
             android:text="@string/rad"
             android:textColor="#FFFFFF"
