--- a/app/src/main/res/layout/activity_main_round.xml
+++ b/app/src/main/res/layout/activity_main_round.xml
@@ -90,12 +90,14 @@
                         android:id="@+id/equation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxLines="1"
                         android:rotation="180"
                         android:text=""
                         android:textAlignment="viewEnd"
                         android:textColor="#FEFEFE"
-                        android:textSize="42dp"
-                        android:maxLines="1"
+                        android:textSize="42sp"
+                        android:inputType="text"
+                        android:importantForAutofill="no"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -250,7 +252,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_op"
-                    android:onClick="operation"
                     android:text="+"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -267,7 +268,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_op"
-                    android:onClick="operation"
                     android:text="-"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -284,7 +284,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_op"
-                    android:onClick="operation"
                     android:text="×"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -301,7 +300,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_op"
-                    android:onClick="operation"
                     android:text="÷"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -355,7 +353,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_button"
-                    android:onClick="number"
                     android:text="0"
                     android:textColor="@color/white"
                     android:textSize="@dimen/roundedTextSize"
@@ -372,7 +369,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_button"
-                    android:onClick="decimal"
                     android:text="."
                     android:textAllCaps="false"
                     android:textColor="@color/white"
@@ -390,7 +386,6 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/circle_button"
-                    android:onClick="newerEquals"
                     android:text="="
                     android:textAllCaps="false"
                     android:textColor="@color/colorAccent"
@@ -408,7 +403,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="1"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -425,7 +419,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="2"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -442,7 +435,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="3"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -459,7 +451,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="4"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -476,7 +467,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="5"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -493,7 +483,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="6"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -510,7 +499,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="7"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -527,7 +515,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="8"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -544,7 +531,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_button"
-                android:onClick="number"
                 android:text="9"
                 android:textColor="@color/white"
                 android:textSize="@dimen/roundedTextSize"
@@ -617,7 +603,6 @@
                                 android:layout_marginEnd="4dp"
                                 android:layout_marginStart="6dp"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="√"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -636,7 +621,6 @@
                                 android:layout_marginEnd="4dp"
                                 android:layout_marginStart="6dp"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="sin"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -664,7 +648,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:paddingTop="10dp"
                                 android:text="^"
                                 android:textColor="#FFFFFF"
@@ -682,7 +665,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="cos"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -709,7 +691,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="!"
                                 android:textColor="#FFFFFF"
                                 android:textSize="@dimen/roundedTopBarCompTextSize"
@@ -726,7 +707,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="tan"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -753,7 +733,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="number"
                                 android:text="π"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -771,7 +750,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="csc"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -798,7 +776,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="number"
                                 android:text="e"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
@@ -817,7 +794,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="sec"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -844,7 +820,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="mod"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
@@ -863,7 +838,6 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
-                                android:onClick="operation"
                                 android:text="cot"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
@@ -885,7 +859,6 @@
                             android:layout_marginVertical="4dp"
                             android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                             android:elevation="0dp"
-                            android:onClick="operation"
                             android:text="log"
                             android:textAlignment="center"
                             android:textAllCaps="false"
@@ -900,7 +873,6 @@
                             android:layout_marginVertical="4dp"
                             android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                             android:elevation="0dp"
-                            android:onClick="operation"
                             android:text="ln"
                             android:textAlignment="center"
                             android:textAllCaps="false"
@@ -935,7 +907,6 @@
             android:layout_marginVertical="12dp"
             android:clickable="false"
             android:elevation="8dp"
-            android:onClick="backspace"
             app:fabCustomSize="69dp"
             app:fabSize="normal"
             android:visibility="gone"
@@ -950,7 +921,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/circle_cheat_the_system_again"
-            android:onClick="backspace"
             android:padding="24dp"
             app:layout_constraintBottom_toBottomOf="@id/deleteAnchor"
             app:layout_constraintEnd_toEndOf="@id/deleteAnchor"
@@ -965,7 +935,8 @@
             android:layout_marginEnd="14dp"
             android:layout_marginBottom="4dp"
             android:background="@null"
-            android:onClick="backspace"
+            android:clickable="false"
+            android:focusable="false"
             android:padding="12dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@id/scrollBar"
@@ -1055,7 +1026,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/circle_cheat_the_system_again"
-                android:onClick="inv"
                 android:text="INV"
                 android:textColor="@color/white"
                 android:textSize="16sp"
@@ -1103,7 +1073,6 @@
                 android:layout_height="0dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:elevation="12dp"
-                android:onClick="operation"
                 android:text="("
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/roundedTopBarCompTextSize"
@@ -1118,7 +1087,6 @@
                 android:layout_height="0dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:elevation="12dp"
-                android:onClick="operation"
                 android:text=")"
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/roundedTopBarCompTextSize"
@@ -1171,9 +1139,8 @@
             android:id="@+id/bDegRad"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="56dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginEnd="4dp"
-            android:onClick="switchMode"
             android:background="@null"
             android:text="@string/rad"
             android:textColor="#FFFFFF"
